--- a/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmForm/ConfirmForm.scss
+++ b/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmForm/ConfirmForm.scss
@@ -46,7 +46,6 @@
 		}
 
 		.form-group {
-			
 			input,
 			label,
 			select {
@@ -70,17 +69,16 @@
 					@extend %texto-form;
 				}
 			}
-			
+
 			select {
 				background-image: url(../../../../assets/images/icons/arrow-select.svg);
 				background-repeat: no-repeat;
 				background-position: right;
 			}
-			
+
 			&.marg-from {
 				margin-bottom: 35px;
 			}
-		
 		}
 
 		.full-width {
@@ -91,7 +89,24 @@
 
 		.checkbox {
 			margin-top: 15px;
+			display: block;
 
+			.privacy-link {
+				font-size: 0.8rem;
+				line-height: 15px;
+				display: inline;
+				margin-left: 5px;
+				color: inherit;
+				text-decoration: inherit;
+
+				@include desktop-small {
+					font-size: 0.6rem;
+				}
+
+				span {
+					color: $tertiaryColor;
+				}
+			}
 			label {
 				display: flex;
 
@@ -111,21 +126,6 @@
 						width: 5%;
 					}
 				}
-
-				span {
-					font-size: 0.8rem;
-					line-height: 15px;
-					display: inline;
-					margin-left: 5px;
-
-					@include desktop-small {
-						font-size: 0.6rem;
-					}
-
-					span {
-						color: $tertiaryColor;
-					}
-				}
 			}
 		}
 	}
@@ -134,63 +134,91 @@
 	}
 }
 
-.PhoneInput {
-	/* This is done to stretch the contents of this component. */
+.phone-input-group {
 	display: flex;
-	align-items: center;
-}
-.PhoneInputCountryIconImg {
-	/* Fixes weird vertical space above the flag icon. */
-	/* https://gitlab.com/catamphetamine/react-phone-number-input/-/issues/7#note_348586559 */
-	display: block;
-	/* 3rd party <SVG/> flag icons won't stretch if they have `width` and `height`.
-	   Also, if an <SVG/> icon's aspect ratio was different, it wouldn't fit too. */
-	width: 100%;
-	height: 100%;
-	width: 2rem;
-}
-
-.PhoneInputCountryIcon--square {
-}
-
-.PhoneInputCountryIcon {
-	width: calc(var(1.5em) * var(1.5));
-	height: var(1.5em);
-}
-
-.PhoneInputCountry {
-	position: relative;
-	align-self: stretch;
-	display: flex;
-	align-items: center;
-	margin-right: 0.35em;
-	width: 5em;
-}
-
-.PhoneInputCountrySelect {
-	position: absolute;
-	top: 0;
-	left: 0;
-	height: 100%;
-	width: 100%;
-	z-index: 1;
-	border: 0;
-	opacity: 0;
-	cursor: pointer;
-    color: transparent !important;
-	option {
-		color: $texto;
+	.PhoneInput {
+		/* This is done to stretch the contents of this component. */
+		display: flex;
+		align-items: center;
 	}
-}
+	.PhoneInputCountryIconImg {
+		/* Fixes weird vertical space above the flag icon. */
+		/* https://gitlab.com/catamphetamine/react-phone-number-input/-/issues/7#note_348586559 */
+		display: block;
+		/* 3rd party <SVG/> flag icons won't stretch if they have `width` and `height`.
+		   Also, if an <SVG/> icon's aspect ratio was different, it wouldn't fit too. */
+		height: 100%;
+		width: 1.7rem;
+	}
 
-.PhoneInputCountryIconUnicode {
-    font-size: 1.5em;
-}
+	.PhoneInputCountryIcon--square {
+	}
 
-.PhoneInputCountrySelect[disabled] {
-	cursor: default;
-}
+	.PhoneInputCountryIcon {
+		width: calc(var(1.5em) * var(1.5));
+		height: var(1.5em);
+	}
 
-.PhoneInputCountrySelectArrow {
-	display: hidden;
+	select {
+		background-image: none;
+		background-repeat: no-repeat;
+		background-position: right;
+	}
+	.PhoneInputCountry {
+		position: relative;
+		align-self: stretch;
+		display: flex;
+		align-items: center;
+		margin-right: 0.35em;
+		width: 3em;
+	}
+
+	.arrow-span {
+		background-image: url(../../../../assets/images/icons/arrow-select.svg);
+		background-repeat: no-repeat;
+		background-position: right;
+		margin-left: 100px;
+	}
+	.PhoneInputCountrySelect {
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		z-index: 1;
+		border: 0;
+		opacity: 0;
+		cursor: pointer;
+		color: transparent !important;
+		option {
+			color: $texto;
+		}
+	}
+
+	.PhoneInputCountryIconUnicode {
+		font-size: 1.5em;
+	}
+
+	.PhoneInputCountrySelect[disabled] {
+		cursor: default;
+	}
+
+	.PhoneInputCountrySelectArrow {
+		display: hidden;
+	}
+
+	.phone-input-prefix {
+		display: inline-block;
+		position: absolute;
+		span {
+			position: relative;
+
+			z-index: 10000000000;
+			color: red;
+		}
+	}
+
+	.arrow-container {
+		position: absolute;
+	}
 }
