--- a/src/page_modules/sorryPage/SorryPage.css
+++ b/src/page_modules/sorryPage/SorryPage.css
@@ -75,7 +75,7 @@ body #erw-root {
     max-width: 87%;
     margin: auto; }
     @media (min-width: 360px) {
-      body .wrapper-general {
+      body #erw-root .wrapper-general {
         max-width: 90%; } }
     @media (min-width: 768px) {
       body #erw-root .wrapper-general {
