Feedback fixes && emailerrors and localStorage

--- a/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmForm/ConfirmForm.css
+++ b/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmForm/ConfirmForm.css
@@ -100,7 +100,7 @@
     .card-container .container-form .checkbox label input[type="checkbox"] {
       -webkit-appearance: checkbox !important;
       background: darkgoldenrod;
-      width: 12%;
+      width: 3%;
       border-color: #808080;
       opacity: 0.6;
       margin: 0; }
@@ -109,7 +109,7 @@
           width: 3%; } }
       @media (min-width: 1080px) {
         .card-container .container-form .checkbox label input[type="checkbox"] {
-          width: 5%; } }
+          width: 3%; } }
     .card-container .container-form .checkbox label a {
       font-size: 0.8rem;
       line-height: 15px;
@@ -121,6 +121,8 @@
           font-size: 0.6rem; } }
       .card-container .container-form .checkbox label a a {
         color: #FF9900; }
+      .card-container .container-form .checkbox label a:visited {
+        color: #808080; }
 
 .card-container .country-flags {
   color: black !important; }
