--- a/src/shared_modules/InputBlock/InputBlock.scss
+++ b/src/shared_modules/InputBlock/InputBlock.scss
@@ -2,35 +2,33 @@
 @import "../../styles/partials/_variables.scss";
 @import "../../styles/partials/_mixins.scss";
 
-
-
-
-label, .label {
+label,
+.label {
 	position: relative;
 	// color: $brandDeepblue;
 	font-weight: 500;
 	// font-family: $title;
 
 	& > span:first-child {
-			transform: translateX(12px);    
+		transform: translateX(12px);
 	}
 
 	span {
-			display: block;
-			margin-bottom: 5px;
+		display: block;
+		margin-bottom: 5px;
 	}
 }
 
 .label {
-  transform: translateX(12px);
-}    
+	transform: translateX(12px);
+}
 
 input {
 	// @include inputApp;
-	
+	color: #808080 !important;
 	&:focus {
-		 outline: 0px;
-		 box-shadow: 0 0 0px 2px #7dbcea;
+		outline: 0px;
+		box-shadow: 0 0 0px 2px #7dbcea;
 	}
 }
 
@@ -40,7 +38,18 @@ input {
 	}
 }
 
-.hide-password,.show-password {
+input[type="checkbox"] {
+	/* Double-sized Checkboxes */
+	-ms-transform: scale(1.25); /* IE */
+	-moz-transform: scale(1.25); /* FF */
+	-webkit-transform: scale(1.25); /* Safari and Chrome */
+	-o-transform: scale(1.25); /* Opera */
+	transform: scale(1.25);
+	padding: 10px;
+}
+
+.hide-password,
+.show-password {
 	position: absolute;
 	top: 38px;
 	right: 10px;
@@ -64,26 +73,24 @@ input {
 }
 
 .hide-password {
-//   background-image: url(../../assets/images/icons/hide-g.svg);
+	//   background-image: url(../../assets/images/icons/hide-g.svg);
 }
 
 .show-password {
-//   background-image: url(../../assets/images/icons/show-g.svg);
+	//   background-image: url(../../assets/images/icons/show-g.svg);
 }
 
-.signin-card, .forgot-card {
-	input[type=text]:first-of-type {
+.signin-card,
+.forgot-card {
+	input[type="text"]:first-of-type {
 		// background: url(../../assets/images/icons/card-g.svg) no-repeat $brandLightGrey;
 		background-size: 25px;
 		background-position: 96% 50%;
 	}
 
 	.password-input {
-		&>input[type=text] {
+		& > input[type="text"] {
 			// background: $brandLightGrey;
 		}
 	}
 }
-
-
-
