--- a/src/shared_modules/Stepper/Stepper.css
+++ b/src/shared_modules/Stepper/Stepper.css
@@ -25,7 +25,8 @@
 .step-container {
   width: 90%;
   margin: auto;
-  padding-bottom: 20px; }
+  padding-bottom: 20px;
+  margin-top: 0px; }
   @media (min-width: 768px) {
     .step-container {
       width: 85%; } }
