--- a/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmForm/ConfirmForm.css
+++ b/src/page_modules/appointments/ConfirmAppointmentPage/ConfirmForm/ConfirmForm.css
@@ -72,7 +72,8 @@
   border-color: rgba(151, 151, 151, 0.2);
   padding: 0px 0px 5px 0px;
   background: none;
-  -webkit-appearance: none; }
+  -webkit-appearance: none;
+  color: #b9b9b9; }
   .card-container .container-form .form-group input:focus,
   .card-container .container-form .form-group label:focus,
   .card-container .container-form .form-group select:focus {
@@ -176,3 +177,9 @@
 
 .PhoneInputCountrySelectArrow {
   display: hidden; }
+
+.option-valid {
+  color: #808080 !important; }
+
+.option-not-valid {
+  color: #b9b9b9 !important; }
