--- a/src/shared_modules/Card/Card.css
+++ b/src/shared_modules/Card/Card.css
@@ -25,6 +25,9 @@
 .hoverable:hover {
   cursor: pointer; }
 
+.is-loading {
+  opacity: 0.5; }
+
 .card {
   border: 1px solid #e4e4e4;
   border-radius: 10px;
