--- a/src/shared_modules/Card/Card.scss
+++ b/src/shared_modules/Card/Card.scss
@@ -8,6 +8,10 @@
 	}
 }
 
+.is-loading{
+	opacity: 0.5;
+}
+
 .card {
 	border: 1px solid lighten(#979797, 30%);
 	border-radius: 10px;
@@ -15,6 +19,7 @@
 	display: flex;
 	align-items: center;
 	position: relative;
+
 
 	&:active {
 		border: 1.2px solid $tertiaryColor;
