--- a/src/shared_modules/Calendar/Calendar.scss
+++ b/src/shared_modules/Calendar/Calendar.scss
@@ -128,3 +128,11 @@
 .DayPickerNavigation_button:hover {
 	border: none;
 }
+
+.calendar-container.disable_prev .DayPickerNavigation_leftButton__horizontalDefault{
+	display: none;
+}
+
+.calendar-container.disable_next .DayPickerNavigation_rightButton__horizontalDefault{
+	display: none;
+}
