--- a/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.scss
+++ b/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.scss
@@ -53,38 +53,35 @@
   }
 
   .flex-desktop {
-
     @include desktop-medium {
       display: flex;
       justify-content: space-between;
       padding-top: 30px;
     }
-    
-    .appointment-summary{
+
+    .appointment-summary {
       margin: 20px 0px;
-       
-        @include desktop-medium{
+
+      @include desktop-medium {
         width: 40%;
-        }
+      }
 
-        h3{
-          text-align: center;
+      h3 {
+        text-align: center;
+        font-size: 0.9rem;
+        color: $texto;
+        margin: 0;
+
+        @include desktop-medium {
           font-size: 0.9rem;
-          color: $texto;
-          margin: 0;
-
-          @include desktop-medium{
-            font-size: 0.9rem;
-            line-height: 20px;
-         }
+          line-height: 20px;
         }
+      }
     }
 
-
     .wrapper-instructions {
-
-      @include desktop-medium{
-      width: 55%;
+      @include desktop-medium {
+        width: 55%;
       }
 
       h2 {
@@ -110,20 +107,34 @@
             margin-bottom: 20px;
           }
 
-          &:nth-child(1) {
-            .info-item {
-              h5 {
-                position: relative;
+          &.info-item {
+            h5 {
+              position: relative;
+            }
 
-                &:before {
-                  background-image: url(../../../assets/images/icons/number-one.svg);
-                  @extend %afterNumber;
-                }
+            .dot {
+              border-radius: 100%;
+              height: 30px;
+              width: 30px;
+              border: blue 1px solid;
+              padding: 5px;
+              display: inline-block;
+              .inner-dot {
+                background-color: blue;
+                border-radius: 100%;
+                height: 30px;
+                width: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                color: white;
+                font-weight: bold;
               }
             }
           }
+        }
 
-          &:nth-child(2) {
+        /*  &:nth-child(2) {
             .info-item {
               h5 {
                 position: relative;
@@ -147,33 +158,32 @@
                 }
               }
             }
+          } */
+
+        .info-item {
+          h5 {
+            margin: 0px;
+            color: $secondaryColor;
+            font-size: 1rem;
+            margin-left: 33px;
+
+            @include desktop-small {
+              font-size: 0.8rem;
+            }
           }
 
-          .info-item {
-            h5 {
-              margin: 0px;
-              color: $secondaryColor;
-              font-size: 1rem;
-              margin-left: 33px;
+          p {
+            margin: 0px 0px 0px 33px;
+            padding-top: 10px;
+            @extend %text-gracias;
 
-              @include desktop-small {
-                font-size: 0.8rem;
-              }
+            @include desktop-small {
+              font-size: 0.7rem;
+              padding-top: 5px;
             }
 
-            p {
-              margin: 0px 0px 0px 33px;
-              padding-top: 10px;
-              @extend %text-gracias;
-
-              @include desktop-small {
-                font-size: 0.7rem;
-                padding-top: 5px;
-              }
-
-              span {
-                font-weight: bold;
-              }
+            span {
+              font-weight: bold;
             }
           }
         }
