--- a/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.css
+++ b/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.css
@@ -1,17 +1,7 @@
-.wrapper-general .card-container .thank-you-message p, .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item p {
+.wrapper-general .card-container .thank-you-message p, .wrapper-general .flex-desktop .wrapper-instructions .card-container .info-item p {
   color: #808080;
   font-size: 0.9rem;
   font-weight: 300; }
-
-.wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(1) .info-item h5:before, .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(2) .info-item h5:before, .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(3) .info-item h5:before {
-  content: "";
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 29px;
-  height: 29px;
-  position: absolute;
-  top: -6px;
-  left: -37px; }
 
 .wrapper-general .card-container .thank-you-message {
   text-align: center;
@@ -68,38 +58,74 @@
 
 .wrapper-general .flex-desktop .wrapper-instructions .card-container {
   display: inherit;
-  margin-bottom: 30px; }
+  margin-bottom: 30px;
+  /*  &:nth-child(2) {
+            .info-item {
+              h5 {
+                position: relative;
+
+                &:before {
+                  background-image: url(../../../assets/images/icons/number-two.svg);
+                  @extend %afterNumber;
+                }
+              }
+            }
+          }
+
+          &:nth-child(3) {
+            .info-item {
+              h5 {
+                position: relative;
+
+                &:before {
+                  background-image: url(../../../assets/images/icons/number-three.svg);
+                  @extend %afterNumber;
+                }
+              }
+            }
+          } */ }
   .wrapper-general .flex-desktop .wrapper-instructions .card-container h2 {
     margin: 0px 0px 5px 0px;
     font-size: 1.3rem; }
   .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:not(:last-child) {
     margin-bottom: 20px; }
-  .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(1) .info-item h5 {
-    position: relative; }
-    .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(1) .info-item h5:before {
-      background-image: url(../../../assets/images/icons/number-one.svg); }
-  .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(2) .info-item h5 {
-    position: relative; }
-    .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(2) .info-item h5:before {
-      background-image: url(../../../assets/images/icons/number-two.svg); }
-  .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(3) .info-item h5 {
-    position: relative; }
-    .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions:nth-child(3) .info-item h5:before {
-      background-image: url(../../../assets/images/icons/number-three.svg); }
   .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item h5 {
+    position: relative; }
+  .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item p {
+    white-space: pre-line; }
+  .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item .dot {
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    border: #00619e 1px solid;
+    padding: 5px;
+    display: inline-block;
+    box-sizing: content-box;
+    margin-right: 5px;
+    margin-left: -15px; }
+    .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item .dot .inner-dot {
+      background-color: #00619e;
+      border-radius: 100%;
+      height: 25px;
+      width: 25px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-weight: bold; }
+  .wrapper-general .flex-desktop .wrapper-instructions .card-container .info-item h5 {
     margin: 0px;
     color: #00619e;
-    font-size: 1rem;
-    margin-left: 33px; }
+    font-size: 1rem; }
     @media (min-width: 1080px) {
-      .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item h5 {
+      .wrapper-general .flex-desktop .wrapper-instructions .card-container .info-item h5 {
         font-size: 0.8rem; } }
-  .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item p {
+  .wrapper-general .flex-desktop .wrapper-instructions .card-container .info-item p {
     margin: 0px 0px 0px 33px;
     padding-top: 10px; }
     @media (min-width: 1080px) {
-      .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item p {
+      .wrapper-general .flex-desktop .wrapper-instructions .card-container .info-item p {
         font-size: 0.7rem;
         padding-top: 5px; } }
-    .wrapper-general .flex-desktop .wrapper-instructions .card-container .instructions .info-item p span {
+    .wrapper-general .flex-desktop .wrapper-instructions .card-container .info-item p span {
       font-weight: bold; }
