--- a/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.scss
+++ b/src/page_modules/appointments/ThankAppointmentPage/ThankAppointmentPage.scss
@@ -107,23 +107,28 @@
             margin-bottom: 20px;
           }
 
-          &.info-item {
+          .info-item {
             h5 {
               position: relative;
             }
-
+            p{
+              white-space: pre-line;
+            }
             .dot {
               border-radius: 100%;
-              height: 30px;
-              width: 30px;
-              border: blue 1px solid;
+              height: 25px;
+              width: 25px;
+              border: #00619e 1px solid;
               padding: 5px;
               display: inline-block;
+              box-sizing: content-box;
+              margin-right: 5px;
+              margin-left: -15px;
               .inner-dot {
-                background-color: blue;
+                background-color: #00619e;
                 border-radius: 100%;
-                height: 30px;
-                width: 30px;
+                height: 25px;
+                width: 25px;
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -165,7 +170,7 @@
             margin: 0px;
             color: $secondaryColor;
             font-size: 1rem;
-            margin-left: 33px;
+            //margin-left: 33px;
 
             @include desktop-small {
               font-size: 0.8rem;
